rubi/parser.output
Grammar

    0 $accept: Program $end

    1 Program: Program Naredba
    2        | Naredba

    3 Naredba: puts_token num_token '.' abs_token
    4        | puts_token string_token '.' NizMetoda

    5 NizMetoda: NizMetoda '.' M
    6          | M

    7 M: reverse_token
    8  | length_token
    9  | index_token
   10  | sort_token
   11  | uniq_token
   12  | downcase_token


Terminals, with rules where they appear

$end (0) 0
'.' (46) 3 4 5
error (256)
puts_token (258) 3 4
abs_token (259) 3
reverse_token (260) 7
index_token (261) 9
length_token (262) 8
sort_token (263) 10
uniq_token (264) 11
downcase_token (265) 12
string_token (266) 4
num_token (267) 3


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
Program (15)
    on left: 1 2, on right: 0 1
Naredba (16)
    on left: 3 4, on right: 1 2
NizMetoda (17)
    on left: 5 6, on right: 4 5
M (18)
    on left: 7 8 9 10 11 12, on right: 5 6


State 0

    0 $accept: . Program $end

    puts_token  shift, and go to state 1

    Program  go to state 2
    Naredba  go to state 3


State 1

    3 Naredba: puts_token . num_token '.' abs_token
    4        | puts_token . string_token '.' NizMetoda

    string_token  shift, and go to state 4
    num_token     shift, and go to state 5


State 2

    0 $accept: Program . $end
    1 Program: Program . Naredba

    $end        shift, and go to state 6
    puts_token  shift, and go to state 1

    Naredba  go to state 7


State 3

    2 Program: Naredba .

    $default  reduce using rule 2 (Program)


State 4

    4 Naredba: puts_token string_token . '.' NizMetoda

    '.'  shift, and go to state 8


State 5

    3 Naredba: puts_token num_token . '.' abs_token

    '.'  shift, and go to state 9


State 6

    0 $accept: Program $end .

    $default  accept


State 7

    1 Program: Program Naredba .

    $default  reduce using rule 1 (Program)


State 8

    4 Naredba: puts_token string_token '.' . NizMetoda

    reverse_token   shift, and go to state 10
    index_token     shift, and go to state 11
    length_token    shift, and go to state 12
    sort_token      shift, and go to state 13
    uniq_token      shift, and go to state 14
    downcase_token  shift, and go to state 15

    NizMetoda  go to state 16
    M          go to state 17


State 9

    3 Naredba: puts_token num_token '.' . abs_token

    abs_token  shift, and go to state 18


State 10

    7 M: reverse_token .

    $default  reduce using rule 7 (M)


State 11

    9 M: index_token .

    $default  reduce using rule 9 (M)


State 12

    8 M: length_token .

    $default  reduce using rule 8 (M)


State 13

   10 M: sort_token .

    $default  reduce using rule 10 (M)


State 14

   11 M: uniq_token .

    $default  reduce using rule 11 (M)


State 15

   12 M: downcase_token .

    $default  reduce using rule 12 (M)


State 16

    4 Naredba: puts_token string_token '.' NizMetoda .
    5 NizMetoda: NizMetoda . '.' M

    '.'  shift, and go to state 19

    $default  reduce using rule 4 (Naredba)


State 17

    6 NizMetoda: M .

    $default  reduce using rule 6 (NizMetoda)


State 18

    3 Naredba: puts_token num_token '.' abs_token .

    $default  reduce using rule 3 (Naredba)


State 19

    5 NizMetoda: NizMetoda '.' . M

    reverse_token   shift, and go to state 10
    index_token     shift, and go to state 11
    length_token    shift, and go to state 12
    sort_token      shift, and go to state 13
    uniq_token      shift, and go to state 14
    downcase_token  shift, and go to state 15

    M  go to state 20


State 20

    5 NizMetoda: NizMetoda '.' M .

    $default  reduce using rule 5 (NizMetoda)
